# SecondGrade.Ilab

./: README.md
LFU/: LFU.h  compare_tests.cpp  main.cpp  unit_tests.cpp  unit_tests.h
LFU/statistic/: LFU_uniform_int_distribution.txt  LRU_uniform_int_distribution.txt
LFU/tests/: unit_tests.cpp  unit_tests.h
LFU_Cache/: LRU.h  README.md  main.cpp
LFU_Cache/statistic/: LRU_uniform_int_distribution.txt
combinatorics_1/: Makefile  kgraph.hpp  main.cpp  main.out
combinatorics_1/parser/: driver.hpp  lex.yy.cc  lexer.l  mylexer.hpp  parser.tab.cc  parser.tab.hh  parser.y
combinatorics_1/tests/: random.cpp
geometry/: Makefile  build.bash  geometry.h  main.cpp  main.out  test.out  unit_tests.cpp
geometry/include/: geometry.h
geometry/include/primitives/: distance.h  general.h  intersections.h  line.h  plane.h  point.h  segment.h  triangle.h  vect.h
geometry/src/include/: geometry.h  octtree.h
geometry/testing/geometry_unit_tests/: distance.h  intersection.h  line_tests.h  plane_tests.h  point_tests.h
geometry/testing/stress_tests/: algorithm.cpp  fast.txt  naive.txt  triangles.txt
geometry/testing/unit_tests/: distance.h  intersection.h  line_tests.h  (+4 more)
geometry_1/: Makefile  README.md
geometry_2/: Makefile  README.md  Vkdriver.cpp  Vkdriver.hpp  camera.hpp  config.txt  main.cpp  main.out
geometry_2/shaders/: compile.sh  shader.vert
geometry_2/tests/: 2.txt
geometry_3/: Makefile  config.txt  main.cpp
geometry_3/Vkdriver/: Vkdriver.cpp  Vkdriver.hpp  config.txt
geometry_3/app/: app.cpp  app.hpp
geometry_3/camera/: camera.cpp  camera.hpp
geometry_3/shaders/: compile.sh  shader.vert  vert.spv
geometry_3/tests/: 2.txt  3.txt  4.txt  generator.cpp
gpu_1/: Makefile  README.md  bsort.cl  bsort.cpp  bsort.h  main.cpp  main.out  random_test.out
gpu_1/tests/: random_test.cpp  test1.txt  test2.txt  test3.txt
gpu_2/: CMakeLists.txt  KMP.cl  Makefile  main.cpp  main.out  main_debug.out  pattern_matching.cpp  pattern_matching.hpp  wtf.cpp
gpu_2/cpu_matching/: CMakeLists.txt  cpu_pm.cpp  cpu_pm.hpp
gpu_2/gpu_matching/: CMakeLists.txt  cl_core.cpp  cl_core.hpp  cl_general.cpp  cl_general.hpp  filter.cl  filter.cpp  filter.hpp  gpu_kmp.cpp  gpu_kmp.hpp  kmp.cl
gpu_2/gpu_matching/kmp/: gpu_kmp.cpp  gpu_kmp.hpp  kmp.cl
gpu_2/kernels/: kmp1.cl  kmp2.cl  preffix_funcs1.cl
gpu_2/pattern_matching/: pattern_matching.cpp  pattern_matching.hpp
gpu_2/support/: CMakeLists.txt  cl_support.cpp  cl_support.hpp  support.cpp  support.hpp  timer.hpp
gpu_2/support/matrix/: matrix.hpp  matrix_buffer.hpp
gpu_2/tests/: execute_tests.cpp  generator.h  random.cpp  stress.cpp  tests.cpp  time.cpp  time_tests.cpp
gpu_2/tests/answers/: 1.ans  2.ans
gpu_3/: CMakeLists.txt  main.cpp
gpu_3/CLFramework/: CLFramework.cpp  CLFramework.hpp  CMakeLists.txt  kernels.hpp
gpu_3/cl_framework/: CMakeLists.txt  cl_general.cpp  cl_general.hpp  cl_linalg.cpp  cl_linalg.hpp  kernels.cl  wired_kernels.hpp
gpu_3/dirichlet/: CMakeLists.txt  dirichlet.cpp  dirichlet.hpp
gpu_3/gpu_linalg/: gpu_linalg.cpp  gpu_linalg.hpp  kernels.cl
gpu_3/support/: support.cpp  support.hpp  timer.hpp
gpu_3/support/matrix/: matrix.hpp
gpu_3/tests/: execute_tests.cpp  time_tests.cpp
gpu_3/tests/answers/: 1.ans  2.ans  3.ans
matrix/: CMakeLists.txt  Makefile  log.txt  main.cpp  matrix.h
matrix_1/: Makefile
matrix_2/: Makefile  circuit_tests.out  main.cpp  main.out  main_debug.out  matrix.h
matrix_2/circuit/: circuit.cpp  circuit.hpp
matrix_2/matrix/: matrix.hpp  matrix_buffer.hpp
matrix_2/parser/: Makefile  driver.hpp  lex.yy.cc  lexer.l  parser.tab.cc  parser.tab.hh  parser.y  stack.hh
matrix_2/tests/: test1.txt
matrix_3/: CMakeLists.txt  main.cpp
matrix_3/matrix/: CMakeLists.txt  matrix_chain.cpp  matrix_chain.hpp
paraCL_1/: Inode.hpp  Makefile  compiler.y  driver.cpp  main.cpp  main.out  node.cpp  node.hpp  parser.hpp  symtab.hpp
paraCL_1(f)/driver/: driver.hpp
paraCL_1(f)/node_interface/: node.cpp  node.hpp
paraCL_1(f)/parser/: Makefile  compiler.tab.cc  compiler.tab.hh  compiler.y
paraCL_1(f)/testing/: err2.txt  fibs.txt
paraCL_1/driver/: driver.cpp  driver.hpp
paraCL_1/node_interface/: Inode.hpp  node.cpp  node.hpp  symtab.hpp
paraCL_1/parser/: compiler.tab.cc  compiler.tab.hh  compiler.y  lex.yy.cc  location.hh  mylexer.hpp  position.hh  scanner.l  stack.hh
paraCL_1/testing/: 1.txt  check_coordinate_quarter.txt  err1.txt
trees_1/: Makefile  avl_tree.hpp  main.cpp
trees_1/testing/: random_test.cpp  specific_tests.cpp
triangles/: geometry.cpp  geometry.h  main.cpp  stress_test.cpp  unit_tests.cpp
(+90 files in other folders)
